# ocr-training-km

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  FIX_COMMANDS.md  HUGGINGFACE_DATASETS.md  Makefile  NOTES.md  QUICKSTART.md  QUICK_FIX.md  README.md  RUN_ON_SERVER.sh  SERVER_COMMANDS.sh  benchmark.py  claude-ocr.md  docker-compose.prod.yml  docker-compose.yml  download_hf.py  mac_m_3_setup_makefile_requirements_mac.md  pyproject.toml  repo_index.txt  requirements-demo.txt  test_api.py
.claude/hooks/: post-train.sh  pre-edit.py
.claude/scripts/: monitor-pipeline.py
.claude/templates/: agent-data-curator.yaml  agent-eval-qa.yaml  agent-ml-pipeline.yaml
.github/workflows/: ci.yml  release.yml
.venv-demo/: pyvenv.cfg
data/: README.md  sample_corpus.txt
data/synth_old/: label.txt
deploy/helm/khmer-ocr/: Chart.yaml  values.yaml
deploy/helm/khmer-ocr/templates/: _helpers.tpl  deployment.yaml
deploy/salad/: .env.salad  README.md  TROUBLESHOOTING.md  fix-opencv-headless.sh  install-opencv-deps.sh  launch.sh  requirements-py312.txt  requirements-salad.txt  salad-config.yaml  salad-deploy.py  salad-ubuntu-setup-fixed.sh  salad-ubuntu-setup.sh  training-entrypoint-fixed.sh  training-entrypoint.sh
docker/: Dockerfile.cpu  Dockerfile.gpu
eval/: __init__.py  benchmark.json  benchmark.py  cer.py  charset_report.json  charset_report_new.json  demo-report.json  harness.py  rescoring_sweep.json  rescoring_sweep.py
governance/: __init__.py  dataset_card.md  license_ledger.csv  manifest.json
infer/: __init__.py  engine.py  postproc.py  predict.py  rescoring.py
lang/: __init__.py  tokenizers.py  train_lm.py
lang/kenlm/: corpus_tokenized.txt
models/demo/: quick_config.yaml  training_report.json
models/onnx/: export_manifest.json
ops/: __init__.py  analyze_charset.py  build_corpus.py  build_lexicon.py  convert_to_paddle.py  convert_to_paddle_fixed.py  download.py  download_hf.py  download_hf_fixed.py  export_onnx.py  generate_charset.py  introspect_datasets.py  manifests.py  pipeline.py  production_gates.py  quick_analysis.py  split.py  synth.py  validate_dataset.py
scripts/: COMPLETE_PIPELINE.py  FINAL_WORKING_TRAIN.py  RUN_COMPLETE_PIPELINE.sh  START_TRAINING_NOW.sh  download_pretrained.sh  fix_cudnn_server.sh  generate_khmer_synthetic.py  prepare_data_lists.py  production_ocr.py  production_ocr_auto.py  production_ocr_cpu.py  quick_start_hf.sh  setup_everything.sh  setup_hf_data.py  simple_test.py  simple_train.py  start_training.sh  test_model.py  test_paddle_gpu.py  train_bare_metal.sh  train_now.py  train_paddleocr_direct.py  train_pro_docker.sh  train_real_hf.py  train_real_paddleocr.py  train_with_hf.py  verify_setup.py
service/: __init__.py  app.py  schemas.py
tests/integration/: test_api.py  test_service_startup.py
tests/unit/: test_normalization.py  test_service_app.py
train/: __init__.py  charset_kh.txt  distributed_train.py  run.py  train_demo.py  train_pytorch.py  train_with_tokenizer.py
train/configs/: dbnet.yaml  dbnet_hf.yaml  dbnet_hf_pro.yaml  rec_kh.yaml  rec_kh_hf.yaml  rec_kh_hf_pro.yaml
